Fixed header z-index to display alerts

--- a/css/ogp-style.less
+++ b/css/ogp-style.less
@@ -261,6 +261,7 @@ nav.navbar.navbar-default {
     padding: 0;
     box-shadow: none;
     max-height: 83px;
+    border-radius: 0;
 }
 .navbar-right {
     margin-right: 0;
@@ -1612,8 +1613,7 @@ body, html, #main, .main-container {
     position: fixed;
     top: 0;
     width:100%;
-    background:yellow;
-    z-index: 10000;   
+    z-index: 1000000;   
 }
 
 .browse-tag {
